# wayleem.com

./: CNAME  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
app/: ClientLayout.tsx  CubeScene.tsx  CubeSceneWrapper.tsx  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/articles/: page.tsx
app/blog/: page.tsx
app/components/: Button.tsx  CubeScene.tsx  Navbar.tsx  RotatingText.tsx  SlidingBanner.tsx
app/contact/: page.tsx
app/contexts/: PageContext.tsx
app/experiences/: page.tsx
app/home/: Hero.tsx  Portrait.tsx  Scene.tsx
app/hooks/: useScrollDirection.ts  useScrollToSection.ts
app/projects/: page.tsx
app/skills/: page.tsx
app/static/: colors.ts  courses.ts  positions.ts  skills.ts  verbs.ts
app/types/: spline.d.ts
assets/: index-752620bb.css  index-9200aa93.js  index-b032dff9.js  index-cfed7565.js  index-e1b2758d.js  index-fbd43bc2.js
client/: CNAME  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  input.css
public/models/: computer.glb  computer1.glb
server/: .env  Cargo.toml  bun.lockb  context.json  package.json  tsconfig.json
server/src/: api.rs  conversation.rs  db.ts  index.ts  main.rs  model.rs
server/src/controllers/: chatbot.ts
server/src/model/: conversation.rs
server/src/models/: context.ts  intents.ts
server/src/routes/: chatbot.ts
server/src/services/: chatbot.ts
src/: App.tsx  input.css  main.tsx
src/layouts/: Canvas.tsx  CubeScene.tsx  Layout.tsx
src/pages/: About.tsx  (+4 more)
(+13 files in other folders)
