[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-ws = "0.2.5"
actix-rt = "2.8.0"
env_logger = "0.10.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
dotenv = "0.15.0"
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", features = ["metal"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[profile.dev.package.ggml-sys]
opt-level = 3

[features]
default = ["metal"]
metal = ["llm/metal"]
